--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
          <div class="swiper home-banner-swiper tp-slilder-active">
             <div class="swiper-wrapper">
                <!-- Slide 1 -->
-               <div class="swiper-slide tp-slider__item tp-slider__height tp-slider__overlay d-flex justify-content-center align-items-center" data-background="assets/img/slider/slider-2.1.jpg">
+               <div class="swiper-slide tp-slider__item tp-slider__height tp-slider__overlay d-flex justify-content-center align-items-center" data-background="assets/images/banner.jpeg">
                   <div class="container">
                      <div class="row justify-content-center">
                         <div class="col-12">
@@ -317,7 +317,7 @@
                   </div>
                </div>
                <!-- Slide 2 -->
-               <div class="swiper-slide tp-slider__item tp-slider__height tp-slider__overlay d-flex justify-content-center align-items-center" data-background="assets/img/slider/slider-2.2.jpg">
+               <div class="swiper-slide tp-slider__item tp-slider__height tp-slider__overlay d-flex justify-content-center align-items-center" data-background="assets/images/banner.jpeg">
                   <div class="container">
                      <div class="row justify-content-center">
                         <div class="col-12">
@@ -339,7 +339,7 @@
                   </div>
                </div>
                <!-- Slide 3 -->
-               <div class="swiper-slide tp-slider__item tp-slider__height tp-slider__overlay d-flex justify-content-center align-items-center" data-background="assets/img/slider/slider-2.3.jpg">
+               <div class="swiper-slide tp-slider__item tp-slider__height tp-slider__overlay d-flex justify-content-center align-items-center" data-background="assets/images/banner.jpeg">
                   <div class="container">
                      <div class="row justify-content-center">
                         <div class="col-12">
@@ -433,7 +433,7 @@
                <div class="col-lg-6">
                   <div class="tp-about-2__img-wrapper p-relative">
                      <div class="tp-about-2__img w-img mb-30">
-                        <img src="./assets/images/about-2.1.png" alt="">
+                        <img src="./assets/images/girl.png" alt="">
                      </div>
                      <div class="tp-about-2-shapes">
                         <div class="tp-about-2__shapes-1">
@@ -442,9 +442,7 @@
                         <div class="tp-about-2__shapes-2 ">
                            <img src="./assets/images/theme-circle.png" alt="">
                         </div>
-                        <div class="tp-about-2__shapes-7 ">
-                           <img src="./assets/images/about-tag.png" alt="">
-                        </div>
+                      
                      </div>
                   </div>
                </div>
